--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.input-container{
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.input-wrapper{
+  width: 30vw;
+  border-radius: 15px;
+  border: solid;
+  padding: 2rem;
+}
