--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,12 +12,12 @@ code {
     monospace;
 }
 
-.input-container{
-  height: 100vh;
+.container{
   width: 100vw;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 .input-wrapper{
