--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,6 +19,12 @@ code {
   justify-content: center;
   flex-direction: column;
 }
+.container-row{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
 
 .input-wrapper{
   margin: 2rem;
